# cooklang-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Readme.md  pyproject.toml
.github/workflows/: CI.yml
cooklang-lsp/: Cargo.toml
cooklang-lsp/src/: backend.rs  main.rs  parser.rs
cooklang-py/: Cargo.toml  pyproject.toml
cooklang-py/src/: lib.rs
cooklang-py/tests/: canonical.yaml
cooklang-rs/: Cargo.toml  Readme.md
cooklang-rs/src/: parser.rs
cooklang-rs/tests/: canonical.rs  canonical.yaml
src/: lib.rs
tests/: test_canonicals.py
