[package]
name = "cooklang-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1.33.0", features = ["io-std", "tokio-macros"]}
tokio = { version = "1.33.0", features = ["full"]}
tower-lsp = "0.20.0"
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
serde = "1.0"
serde_yaml = "0.9"
cooklang-rs = { path = "../cooklang-rs"}
anyhow = { version = "1.0.75", features = ["backtrace"]}
dashmap = "5.5.3"
thiserror = "1.0.50"
dirs = "5.0.1"
toml = "0.8.6"
tree-sitter = "0.20.10"
tree-sitter-cooklang = "0.0.2"

[build-dependencies]
cc="*"
