[package]
name = "cooklang-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"

[dev-dependencies]
pretty_assertions = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.11"
